[package]
name = "day-11"
version = "0.1.0"
authors = ["Juan Navarro <juan.navarro@gmx.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.20.6"
num-traits = "0.2"
num-derive = "0.3"
turtle = "1.0.0-rc.3"
