[package]
name = "day-12"
version = "0.1.0"
authors = ["Juan Navarro <juan.navarro@gmx.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = { version = "0.20.6", features = ["serde"] }
recap = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
